force-app/main/default/objects/OB_Campaign__c/OB_Campaign__c.object-meta.xml
<CustomObject>
    <label>OB Campaign</label>
    <nameField>
        <displayFormat>OB Campaign-{0000}</displayFormat>
        <label>OB Campaign Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OB Campaigns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>