force-app/main/default/objects/OB_Campaign__c/fields/Account_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Email__c</fullName>
    <formula>Opportunity__r.Account.Parent.Marketing_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Email</label>
    <type>Text</type>
</CustomField>