force-app/main/default/objects/OB_Campaign__c/fields/Call_Center_ID__c.field-meta.xml
<CustomField>
    <fullName>Call_Center_ID__c</fullName>
    <formula>OB_Campaign_Call_Center__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Center ID</label>
    <type>Text</type>
</CustomField>