force-app/main/default/objects/OB_Campaign__c/fields/Call_Center_is_Ready_Date__c.field-meta.xml
<CustomField>
    <fullName>Call_Center_is_Ready_Date__c</fullName>
    <label>Call Center is Ready Date</label>
    <type>Date</type>
</CustomField>