force-app/main/default/objects/OB_Campaign__c/fields/Call_Center_is_Ready_Post__c.field-meta.xml
<CustomField>
    <fullName>Call_Center_is_Ready_Post__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Call center posted back to us to inform that they are ready to receive leads.  This is for OB Campaign Automation.  PLEASE DO NOT DELETE.</description>
    <inlineHelpText>Call center posted back to us to inform that they are ready to receive leads.</inlineHelpText>
    <label>Call Center is Ready</label>
    <type>Checkbox</type>
</CustomField>