force-app/main/default/objects/OB_Campaign__c/fields/fOB_Campaign_Call_Center__c.field-meta.xml
<CustomField>
    <fullName>fOB_Campaign_Call_Center__c</fullName>
    <formula>Opportunity__r.OB_Campaign_Call_Center__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fOB Campaign Call Center</label>
    <type>Text</type>
</CustomField>