force-app/main/default/objects/OB_Campaign__c/fields/fOB_Campaign_Original_Active_Date__c.field-meta.xml
<CustomField>
    <fullName>fOB_Campaign_Original_Active_Date__c</fullName>
    <formula>Opportunity__r.OB_Campaign_Original_Activation_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OB Campaign Original Active Date</label>
    <type>Date</type>
</CustomField>