force-app/main/default/objects/OB_Campaign__c/fields/fOB_Campaign_Transfer_Number__c.field-meta.xml
<CustomField>
    <fullName>fOB_Campaign_Transfer_Number__c</fullName>
    <formula>Opportunity__r.OB_Campaign_Transfer_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OB Campaign Transfer Number</label>
    <type>Text</type>
</CustomField>