force-app/main/default/objects/OB_Campaign__c/fields/fOpportunity__c.field-meta.xml
<CustomField>
    <fullName>fOpportunity__c</fullName>
    <formula>Opportunity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fOpportunity</label>
    <type>Text</type>
</CustomField>