force-app/main/default/objects/OB_Campaign__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <formula>if(
Opportunity__r.NuHome_Industry__r.Name = Null, Text(Opportunity__r.NuCard_Industry__c), Opportunity__r.NuHome_Industry__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry</label>
    <type>Text</type>
</CustomField>