force-app/main/default/objects/OB_Campaign__c/fields/OB_Campaign_Active__c.field-meta.xml
<CustomField>
    <fullName>OB_Campaign_Active__c</fullName>
    <description>Pulled from the Opportunities Object as a formula.  Used a trigger to create OB Campaign Members under the active campaign.</description>
    <formula>Opportunity__r.OB_Campaign_Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OB Campaign Active</label>
    <type>Checkbox</type>
</CustomField>