force-app/main/default/objects/OB_Campaign__c/fields/OB_Campaign_Active_Date__c.field-meta.xml
<CustomField>
    <fullName>OB_Campaign_Active_Date__c</fullName>
    <formula>Opportunity__r.OB_Campaign_Active_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OB Campaign Active Date</label>
    <type>Date</type>
</CustomField>