force-app/main/default/objects/OB_Campaign__c/fields/OB_Campaign_Call_Center__c.field-meta.xml
<CustomField>
    <fullName>OB_Campaign_Call_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OB Campaign Call Center</label>
    <referenceTo>OB_Campaign_Call_Center__c</referenceTo>
    <relationshipLabel>OB Campaigns</relationshipLabel>
    <relationshipName>OB_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>