force-app/main/default/objects/OB_Campaign__c/fields/OB_Campaign_Deactivated_Date__c.field-meta.xml
<CustomField>
    <fullName>OB_Campaign_Deactivated_Date__c</fullName>
    <label>OB Campaign Deactivated Date</label>
    <type>Date</type>
</CustomField>