force-app/main/default/objects/OB_Campaign__c/fields/OB_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>OB_Campaign_ID__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OB Campaign ID</label>
    <type>Text</type>
</CustomField>