force-app/main/default/objects/OB_Campaign__c/fields/OB_Campaign_Offer_Amount__c.field-meta.xml
<CustomField>
    <fullName>OB_Campaign_Offer_Amount__c</fullName>
    <formula>Opportunity__r.OB_Campaign_Offer_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OB Campaign Offer Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>