force-app/main/default/objects/OB_Campaign__c/fields/OB_Campaign_Primary_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>OB_Campaign_Primary_Contact_Email__c</fullName>
    <description>OB Campaign Primary Contact Email pulled from the opportunity object.</description>
    <formula>Opportunity__r.OB_Campaign_Primary_Contact_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact Email</label>
    <type>Text</type>
</CustomField>