force-app/main/default/objects/OB_Campaign__c/fields/OB_Campaign_Time_Zones__c.field-meta.xml
<CustomField>
    <fullName>OB_Campaign_Time_Zones__c</fullName>
    <formula>Text(Opportunity__r.OB_Campaign_US_Time_Zones__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OB Campaign Time Zones</label>
    <type>Text</type>
</CustomField>