force-app/main/default/objects/OB_Campaign__c/fields/OB_DBA_Name__c.field-meta.xml
<CustomField>
    <fullName>OB_DBA_Name__c</fullName>
    <formula>Opportunity__r.OB_DBA_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OB DBA Name</label>
    <type>Text</type>
</CustomField>