force-app/main/default/objects/OB_Campaign__c/fields/OBCM_3_to_6_Months__c.field-meta.xml
<CustomField>
    <fullName>OBCM_3_to_6_Months__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to create OB Campaign Members from 3 to 6 months.  DO NOT DELETE</description>
    <inlineHelpText>Used to create OB Campaign Members from 3 to 6 months.</inlineHelpText>
    <label>OBCM 3 to 6 Months</label>
    <type>Checkbox</type>
</CustomField>