force-app/main/default/objects/OB_Campaign__c/fields/OBCM_6_to_9_Months__c.field-meta.xml
<CustomField>
    <fullName>OBCM_6_to_9_Months__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to create OB Campaign Members from 6 to 9 months.  DO NOT DELETE</description>
    <inlineHelpText>Used to create OB Campaign Members from 6 to 9 months.</inlineHelpText>
    <label>OBCM 6 to 9 Months</label>
    <type>Checkbox</type>
</CustomField>