force-app/main/default/objects/OB_Campaign__c/fields/OBCM_9_to_12_Months__c.field-meta.xml
<CustomField>
    <fullName>OBCM_9_to_12_Months__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to create OB Campaign Members from 9 to 12 months.  DO NOT DELETE</description>
    <inlineHelpText>Used to create OB Campaign Members from 9 to 12 months.</inlineHelpText>
    <label>OBCM 9 to 12 Months</label>
    <type>Checkbox</type>
</CustomField>