force-app/main/default/objects/OB_Campaign__c/fields/OBCM_Last_3_Months__c.field-meta.xml
<CustomField>
    <fullName>OBCM_Last_3_Months__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to create OB Campaign Members for the last 3 months.  DO NOT DELETE</description>
    <inlineHelpText>Used to create OB Campaign Members for the last 3 months.</inlineHelpText>
    <label>OBCM Last 3 Months</label>
    <type>Checkbox</type>
</CustomField>