force-app/main/default/objects/OB_Campaign__c/fields/Opp_OB_Operation_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opp_OB_Operation_Stage__c</fullName>
    <formula>TEXT( Opportunity__r.OB_Operation_Stage__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp OB Operation Stage</label>
    <type>Text</type>
</CustomField>