force-app/main/default/objects/OB_Campaign__c/fields/Opp_Stage_Type__c.field-meta.xml
<CustomField>
    <fullName>Opp_Stage_Type__c</fullName>
    <formula>TEXT(Opportunity__r.Stage_Types__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Stage Type</label>
    <type>Text</type>
</CustomField>