force-app/main/default/objects/OB_Campaign__c/fields/Primary_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Name__c</fullName>
    <formula>Opportunity__r.OB_Campaign_Primary_Contact_First_Name__c &amp;&quot; &quot;&amp;  Opportunity__r.OB_Campaign_Primary_Contact_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact Name</label>
    <type>Text</type>
</CustomField>