force-app/main/default/objects/OB_Campaign__c/fields/Primary_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Phone__c</fullName>
    <formula>Opportunity__r.OB_Campaign_Primary_Contact_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact Phone</label>
    <type>Text</type>
</CustomField>