force-app/main/default/objects/OB_Campaign__c/listViews/Active_Campaigns_nuHome.listView-meta.xml
<ListView>
    <fullName>Active_Campaigns_nuHome</fullName>
    <columns>Industry__c</columns>
    <columns>OB_Campaign_Active_Date__c</columns>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>OB_Campaign_Branch__c</columns>
    <columns>fScheduling_Paused_End_Date__c</columns>
    <columns>OB_Campaign_Active__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>OB_Campaign_Call_Center__c</columns>
    <columns>fScheduling_Paused_Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OB_Campaign_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>OB_Campaign_Call_Center__c</field>
        <operation>contains</operation>
        <value>home</value>
    </filters>
    <label>Active Campaigns nuHome</label>
</ListView>