force-app/main/default/objects/OB_Campaign__c/listViews/Active_Campaigns_Touchstone.listView-meta.xml
<ListView>
    <fullName>Active_Campaigns_Touchstone</fullName>
    <columns>OBJECT_ID</columns>
    <columns>Opportunity__c</columns>
    <columns>NAME</columns>
    <columns>OB_Campaign_Call_Center__c</columns>
    <columns>OB_Campaign_Active__c</columns>
    <columns>Call_Center_is_Ready_Post__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OB_Campaign_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>OB_Campaign_Call_Center__c</field>
        <operation>equals</operation>
        <value>Touchstone</value>
    </filters>
    <label>Active Campaigns Touchstone</label>
</ListView>