force-app/main/default/objects/OB_Campaign__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>Opportunity__c</columns>
    <columns>NAME</columns>
    <columns>OB_Campaign_Call_Center__c</columns>
    <columns>OB_Campaign_Active__c</columns>
    <columns>fScheduling_Paused_Start_Date__c</columns>
    <columns>fScheduling_Paused_End_Date__c</columns>
    <columns>Call_Center_is_Ready_Post__c</columns>
    <columns>OB_Campaign_Branch__c</columns>
    <columns>Industry__c</columns>
    <columns>Opp_OB_Operation_Stage__c</columns>
    <columns>OB_Campaign_Primary_Contact_Email__c</columns>
    <columns>Primary_Contact_Name__c</columns>
    <columns>Primary_Contact_Phone__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opp_OB_Operation_Stage__c</field>
        <operation>equals</operation>
        <value>Campaign Test</value>
    </filters>
    <label>All</label>
</ListView>