force-app/main/default/objects/OB_Campaign__c/listViews/Guardian.listView-meta.xml
<ListView>
    <fullName>Guardian</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>fOB_Campaign_Call_Center__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity__c</field>
        <operation>equals</operation>
        <value>Guardian Protection Services-OB Campaign-FL-Hillsborough_Tampa-00106721</value>
    </filters>
    <label>Guardian</label>
</ListView>