force-app/main/default/objects/OB_Campaign__c/listViews/Inactive_Campaigns_NH.listView-meta.xml
<ListView>
    <fullName>Inactive_Campaigns_NH</fullName>
    <columns>OBJECT_ID</columns>
    <columns>Opportunity__c</columns>
    <columns>NAME</columns>
    <columns>Industry__c</columns>
    <columns>OB_Campaign_Call_Center__c</columns>
    <columns>OB_Campaign_Active__c</columns>
    <columns>Call_Center_is_Ready_Post__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OB_Campaign_Active__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>fOB_Campaign_Call_Center__c</field>
        <operation>equals</operation>
        <value>NuHome</value>
    </filters>
    <label>Inactive Campaigns - NH</label>
</ListView>